# le-change

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WORKFLOW_TESTING.md  action.yml  deny.toml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  fuzz.yml  release-cli.yml  release-python.yml  release-rust.yml  release.yml  security.yml  workflow-integration-test.yml
crates/lechange-cli/: Cargo.toml
crates/lechange-cli/src/: main.rs
crates/lechange-core/: Cargo.toml
crates/lechange-core/benches/: diff_benchmark.rs  integration_benchmark.rs  interner_benchmark.rs  pattern_benchmark.rs
crates/lechange-core/src/: error.rs  file_ops.rs  interner.rs  lib.rs  traits.rs  types.rs
crates/lechange-core/src/coordination/: ci_decision.rs  mod.rs  processor.rs  workflow_tracker.rs
crates/lechange-core/src/git/: diff.rs  mod.rs  recovery.rs  repository.rs  sha.rs  submodule.rs
crates/lechange-core/src/http/: client.rs  mod.rs  workflows.rs
crates/lechange-core/src/output/: computed.rs  dir_names.rs  json_format.rs  mod.rs  writer.rs
crates/lechange-core/src/patterns/: loader.rs  matcher.rs  mod.rs
crates/lechange-core/src/platform/: mod.rs
crates/lechange-core/tests/: ancestor_recovery_integration.rs  group_by_integration.rs  integration_tests.rs  property_based.rs  workflow_integration.rs
crates/lechange-fuzz/: Cargo.toml
crates/lechange-fuzz/fuzz_targets/: ancestor_recovery.rs  config_parser.rs  diff_parser.rs  file_path_handler.rs  pattern_matcher.rs
crates/lechange-python/: Cargo.toml
crates/lechange-python/src/: config.rs  detector.rs  error.rs  format_utils.rs  lib.rs  output_writer.rs  path_util.rs  pattern_loader.rs  pattern_matcher.rs  recovery.rs  result.rs  runtime.rs
examples/: async_detection.py  basic_detection.py  github_actions_integration.py  github_actions_workflow.yml  pattern_filtering.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_parser.rs  fuzz_diff_parser.rs  fuzz_interner.rs  fuzz_pattern_matcher.rs
python/lechange/: __init__.py  py.typed
python/tests/: __init__.py  conftest.py  test_basic.py  test_detector_integration.py  test_exceptions.py  test_file_recovery.py  test_format_utils.py  test_output_writer.py  test_path_util.py  test_pattern_loader.py  test_pattern_matcher.py  test_real_repo.py  test_workflow_tracking.py
