[package]
name = "lechange-cli"
version = "0.1.0"
edition = "2021"
authors = ["terekete <spicyzhug@gmail.com>"]
description = "Ultraperformant change detection CLI for GitHub Actions"
license = "AGPL-3.0-or-later"
repository = "https://github.com/lituus-io/le-change"

[[bin]]
name = "lechange"
path = "src/main.rs"

[dependencies]
lechange-core = { path = "../lechange-core" }
clap = { version = "4", default-features = false, features = ["derive", "env", "std", "help", "usage", "error-context"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1", default-features = false }
