[package]
name = "lechange-python"
version = "0.1.0"
edition = "2021"
authors = ["terekete <spicyzhug@gmail.com>"]
description = "Python bindings for lechange-core"
license = "MIT"
repository = "https://github.com/lituus-io/lechange"

[lib]
name = "lechange"
crate-type = ["cdylib"]

[dependencies]
# Core library
lechange-core = { path = "../lechange-core" }

# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Global runtime management
once_cell = "1.19"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
pyo3-build-config = "0.22"

[features]
default = []
